[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/scripts/UI/optionsPanel.gd" type="Script" id=1]

[node name="optionsPanel" type="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = 200.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_page" type="Control" parent="."]
margin_right = 800.0
margin_bottom = 400.0

[node name="save_options" type="Button" parent="options_page"]
margin_left = 215.0
margin_top = 375.0
margin_right = 310.0
margin_bottom = 395.0
focus_neighbour_left = NodePath("../close_options")
focus_neighbour_top = NodePath("../../btn_Inputs")
focus_neighbour_right = NodePath("../close_options")
focus_neighbour_bottom = NodePath("../HBoxContainer/buttons/windowMode")
text = "Save & Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_options" type="Button" parent="options_page"]
margin_left = 485.0
margin_top = 375.0
margin_right = 580.0
margin_bottom = 395.0
focus_neighbour_left = NodePath("../save_options")
focus_neighbour_top = NodePath("../../btn_Inputs")
focus_neighbour_right = NodePath("../save_options")
focus_neighbour_bottom = NodePath("../HBoxContainer/buttons/windowMode")
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="options_page"]
margin_left = 200.0
margin_top = 100.0
margin_right = 600.0
margin_bottom = 300.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labels" type="VBoxContainer" parent="options_page/HBoxContainer"]
margin_left = 105.0
margin_right = 196.0
margin_bottom = 200.0
alignment = 1

[node name="windowMode" type="Label" parent="options_page/HBoxContainer/labels"]
margin_top = 84.0
margin_right = 91.0
margin_bottom = 98.0
text = "Window Mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vsync" type="Label" parent="options_page/HBoxContainer/labels"]
margin_top = 102.0
margin_right = 91.0
margin_bottom = 116.0
text = "Vsync"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="options_page/HBoxContainer"]
margin_left = 200.0
margin_right = 295.0
margin_bottom = 200.0
alignment = 1

[node name="windowMode" type="OptionButton" parent="options_page/HBoxContainer/buttons"]
margin_top = 78.0
margin_right = 95.0
margin_bottom = 98.0
focus_neighbour_top = NodePath("../../../save_options")
focus_neighbour_bottom = NodePath("../vsync")
text = "Fullscreen"
items = [ "Fullscreen", null, false, 0, null, "Windowed", null, false, 1, null ]
selected = 0

[node name="vsync" type="OptionButton" parent="options_page/HBoxContainer/buttons"]
margin_top = 102.0
margin_right = 95.0
margin_bottom = 122.0
focus_neighbour_top = NodePath("../windowMode")
focus_neighbour_bottom = NodePath("../../../save_options")
text = "Yes"
items = [ "Yes", null, false, 0, null, "No", null, false, 1, null ]
selected = 0

[node name="btn_Inputs" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -43.204
margin_top = -162.553
margin_right = 57.796
margin_bottom = -142.553
focus_neighbour_top = NodePath("../options_page/HBoxContainer/buttons/vsync")
focus_neighbour_bottom = NodePath("../options_page/save_options")
text = "Rebind Keys"

[node name="Input_page" type="Control" parent="."]
visible = false
margin_right = 800.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input_close" type="Button" parent="Input_page"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -30.0
margin_right = 47.5
margin_bottom = -10.0
focus_neighbour_top = NodePath("../VBoxContainer/controls/keyboard/move_right")
focus_neighbour_bottom = NodePath("../VBoxContainer/controls/keyboard/jump")
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Input_page"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labels" type="HBoxContainer" parent="Input_page/VBoxContainer"]
margin_right = 600.0
margin_bottom = 14.0

[node name="actions" type="Label" parent="Input_page/VBoxContainer/labels"]
margin_right = 197.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Actions"
align = 1

[node name="keyboard" type="Label" parent="Input_page/VBoxContainer/labels"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Keyboard"
align = 1

[node name="gamepad" type="Label" parent="Input_page/VBoxContainer/labels"]
margin_left = 402.0
margin_right = 600.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Gamepad"
align = 1

[node name="controls" type="HBoxContainer" parent="Input_page/VBoxContainer"]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="actions" type="VBoxContainer" parent="Input_page/VBoxContainer/controls"]
margin_right = 197.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="jump" type="Label" parent="Input_page/VBoxContainer/controls/actions"]
margin_right = 197.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Jump"
align = 1
valign = 1

[node name="Float" type="Label" parent="Input_page/VBoxContainer/controls/actions"]
margin_top = 57.0
margin_right = 197.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Float"
align = 1
valign = 1

[node name="Slowtime" type="Label" parent="Input_page/VBoxContainer/controls/actions"]
margin_top = 114.0
margin_right = 197.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Slow Time"
align = 1
valign = 1

[node name="move_left" type="Label" parent="Input_page/VBoxContainer/controls/actions"]
margin_top = 171.0
margin_right = 197.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Move Left"
align = 1
valign = 1

[node name="move_right" type="Label" parent="Input_page/VBoxContainer/controls/actions"]
margin_top = 228.0
margin_right = 197.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Move Right"
align = 1
valign = 1

[node name="keyboard" type="VBoxContainer" parent="Input_page/VBoxContainer/controls"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="jump" type="Button" parent="Input_page/VBoxContainer/controls/keyboard"]
margin_right = 197.0
margin_bottom = 53.0
focus_neighbour_top = NodePath("../../../../input_close")
focus_neighbour_bottom = NodePath("../floating")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Space"

[node name="floating" type="Button" parent="Input_page/VBoxContainer/controls/keyboard"]
margin_top = 57.0
margin_right = 197.0
margin_bottom = 110.0
focus_neighbour_top = NodePath("../jump")
focus_neighbour_bottom = NodePath("../time_slow")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "J"

[node name="time_slow" type="Button" parent="Input_page/VBoxContainer/controls/keyboard"]
margin_top = 114.0
margin_right = 197.0
margin_bottom = 167.0
focus_neighbour_top = NodePath("../floating")
focus_neighbour_bottom = NodePath("../move_left")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "L"

[node name="move_left" type="Button" parent="Input_page/VBoxContainer/controls/keyboard"]
margin_top = 171.0
margin_right = 197.0
margin_bottom = 224.0
focus_neighbour_top = NodePath("../time_slow")
focus_neighbour_bottom = NodePath("../move_right")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A"

[node name="move_right" type="Button" parent="Input_page/VBoxContainer/controls/keyboard"]
margin_top = 228.0
margin_right = 197.0
margin_bottom = 282.0
focus_neighbour_top = NodePath("../move_left")
focus_neighbour_bottom = NodePath("../../../../input_close")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "D"

[node name="gamepad" type="VBoxContainer" parent="Input_page/VBoxContainer/controls"]
margin_left = 402.0
margin_right = 600.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="jump" type="Button" parent="Input_page/VBoxContainer/controls/gamepad"]
visible = false
margin_right = 198.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "X"

[node name="floating" type="Button" parent="Input_page/VBoxContainer/controls/gamepad"]
visible = false
margin_top = 57.0
margin_right = 198.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "R1"

[node name="time_slow" type="Button" parent="Input_page/VBoxContainer/controls/gamepad"]
visible = false
margin_top = 114.0
margin_right = 198.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "L1"

[node name="label_jump" type="Label" parent="Input_page/VBoxContainer/controls/gamepad"]
margin_right = 198.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "X"
align = 1
valign = 1

[node name="label_floating" type="Label" parent="Input_page/VBoxContainer/controls/gamepad"]
margin_top = 57.0
margin_right = 198.0
margin_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "R1"
align = 1
valign = 1

[node name="label_time_slow" type="Label" parent="Input_page/VBoxContainer/controls/gamepad"]
margin_top = 114.0
margin_right = 198.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "L1"
align = 1
valign = 1

[node name="label_left" type="Label" parent="Input_page/VBoxContainer/controls/gamepad"]
margin_top = 171.0
margin_right = 198.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Dpad-left/left stick"
align = 1
valign = 1

[node name="label_right" type="Label" parent="Input_page/VBoxContainer/controls/gamepad"]
margin_top = 228.0
margin_right = 198.0
margin_bottom = 282.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Dpad-right/left stick"
align = 1
valign = 1

[node name="rebind_popup" type="AcceptDialog" parent="Input_page"]
margin_left = 311.5
margin_top = 135.0
margin_right = 586.5
margin_bottom = 193.0
popup_exclusive = true
window_title = "[insert action name]"
dialog_text = "Press a new button to bind to this action"
[connection signal="pressed" from="Input_page/VBoxContainer/controls/keyboard/jump" to="." method="_on_jump_pressed"]
[connection signal="pressed" from="Input_page/VBoxContainer/controls/keyboard/floating" to="." method="_on_floating_pressed"]
[connection signal="pressed" from="Input_page/VBoxContainer/controls/keyboard/time_slow" to="." method="_on_time_slow_pressed"]
[connection signal="pressed" from="Input_page/VBoxContainer/controls/keyboard/move_left" to="." method="_on_move_left_pressed"]
[connection signal="pressed" from="Input_page/VBoxContainer/controls/keyboard/move_right" to="." method="_on_move_right_pressed"]
